tests/baselines/reference/parserSkippedTokens19.errors.txt
==== tests/cases/compiler/parserSkippedTokens19.ts (2 errors) ====
    \ declare var v;
    ~
!!! parserSkippedTokens19.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens19.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.